migrate more code; fix lint

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,8 @@ install_requires =
     memoized-property==1.0.3
     # cli windowing toolkit
     rich==13.3.4
-
+    # cli option-parsing
+    click==8.1.4
 [options.packages.find]
 where = src
 exclude =
