fix copy-pasta in automation

--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,7 @@ commands =
 [testenv:shell]
 description=Debugging shell for this project
 commands =
-  python -m shimport shell
+  python -m fleks shell
 deps =
   IPython
 
