migrate more code/deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ package_dir =
     =src
 
 # Require a min/specific Python version (comma-separated conditions)
-python_requires = >3.6
+python_requires = >3.7
 
 # Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
 # Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
@@ -44,10 +44,17 @@ python_requires = >3.6
 install_requires =
     # datastructures / validation / functools
     memoized-property==1.0.3
+    # NB: pydantic v2 is breaking
+    pydantic==1.10.11 
+    # events/signals
+    blinker==1.6.2
     # cli windowing toolkit
     rich==13.3.4
     # cli option-parsing
     click==8.1.4
+    # cli ncurses
+    enlighten==1.11.2
+
 [options.packages.find]
 where = src
 exclude =
