update docs and deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,8 +13,8 @@ author = elo
 platforms = any
 license = MIT
 license_files = LICENSE.txt
-long_description = See the project README
-long_description_content_type = text/x-rst; charset=UTF-8
+long_description = file: README.md
+long_description_content_type = 'text/markdown'
 url = https://github.com/elo-enterprises/fleks/
 # Add here related links, for example:
 project_urls =
@@ -49,9 +49,9 @@ install_requires =
     # events/signals
     blinker==1.6.2
     # cli windowing toolkit
-    rich==13.3.4
+    rich>=13.3.4
     # cli option-parsing
-    click==8.1.4
+    click>=8.1.4
     # cli ncurses
     enlighten==1.11.2
 
