--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ platforms = any
 license = MIT
 license_files = LICENSE.txt
 long_description = file: README.md
-long_description_content_type = 'text/markdown'
+long_description_content_type = text/markdown
 url = https://github.com/elo-enterprises/fleks/
 # Add here related links, for example:
 project_urls =
