--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,17 @@ commands =
   bash -x -c "\
     (mypy --install-types --non-interactive src/||true)"
 
+[testenv:dtest]
+description=Docs tests
+setenv =
+  {[testenv]setenv}
+  TEST_SUITE=docs
+deps=
+  {[testenv]deps}
+  pynchon
+commands =
+  bash -x -c "pynchon jinja apply && python -m doctest --verbose README.md"
+
 [testenv:utest]
 description=Unit tests
 setenv =
