more rich imports

--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,7 @@ deps=
   {[testenv]deps}
   pynchon
 commands =
-  bash -x -c "pynchon jinja apply && python -m doctest --verbose README.md"
+  bash -x -c "pynchon jinja apply && python -m doctest -oELLIPSIS README.md"
 
 [testenv:utest]
 description=Unit tests
