docs, doc-tests, doc-rendering work; stubbing config class

--- a/tox.ini
+++ b/tox.ini
@@ -50,9 +50,8 @@ setenv =
   TEST_SUITE=docs
 deps=
   {[testenv]deps}
-  pynchon
 commands =
-  bash -x -c "pynchon jinja apply && python -m doctest -oELLIPSIS README.md"
+  bash -x -c "python -m doctest -oELLIPSIS README.md"
 
 [testenv:utest]
 description=Unit tests
