stubbing models/config; docs; use pydash for smarter lookups; normalization and small bugfixes

--- a/.pynchon.json5
+++ b/.pynchon.json5
@@ -5,6 +5,7 @@
     // defaults; these are included anyway
     'globals', 'render', 'gen', 'project', 'plugins',
     'jinja', 'json', 'git', 'core', 'python', 'gripe',
+    'tests',
 
     // Recommended for projects with source-code
     "docs", "src", "tests", "cicd", "fixme", "github",
