--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ python_requires = >3.7
 # For more information, check out https://semver.org/.
 install_requires =
     # datastructures / validation / functools
+    pydash==7.0.1 # parsing json by dotpath
     memoized-property==1.0.3
     # NB: pydantic v2 is breaking
     pydantic==1.10.11 
