--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -11,6 +11,7 @@ permissions:
   contents: read
 jobs:
   tests:
+    name: Tests
     uses: ./.github/workflows/python-test.yml
   publish:
     name: Publish
