--- a/setup.cfg
+++ b/setup.cfg
@@ -49,9 +49,11 @@ install_requires =
     pydantic==1.10.11 
     # events/signals
     blinker==1.6.2
-    # cli windowing toolkit
+    # rich output and cli windowing toolkit
+    # https://github.com/Textualize/rich
     rich>=13.3.4
     # cli option-parsing
+    # https://click.palletsprojects.com/en/8.1.x/
     click>=8.1.4
     # cli ncurses
     enlighten==1.11.2
